# res-noise-stabilization

./: .gitignore  LICENSE  README.md  ResData.py  clear_lustre.py  climate_replication_test.py  climate_replication_test_morenoise.py  climate_replication_test_sparse.py  compute.pyx  compute_lmnt_reg.py  compute_typed.c  compute_typed.pyx  csc_mult.py  deepthought_clean.py  find_optimal_hyperparams.py  find_optimal_hyperparams_KS.py  find_optimal_hyperparams_recalc.py  find_pred_climate_cutoff.py  index.html  index.md  ks_etdrk4.py  ks_etdrk4_py.py  ks_poincare_max_test.py  lorenzrungekutta_numba.py  noisetest_cython.c  noisetest_cython.pyx  numba_csc_test.py  numba_sparse_matrix_test.py  optimizingAlpha_gridsearch.py  optimizingAlpha_gridsearch_100.py  optimizingAlpha_gridsearch_200.py  optimizingAlpha_gridsearch_300.py  optimizingAlpha_gridsearch_400.py  optimizingAlpha_gridsearch_50.py  optimizingAlpha_gridsearch_50_10reals.py  optimizingAlpha_gridsearch_50_2reals.py  optimizingAlpha_gridsearch_50_5reals.py  optimizingAlpha_ray.py  optimizingAlpha_ray_100train.py  optimizingAlpha_ray_100train_10reals.py  (+158 more)
data_scripts/: process_test_data.py
helpers/: ResData.py  RunOpts.py  csc_mult.py  get_run_opts.py  ks_etdrk4.py  poincare_max.py  poincare_max_peaks.py  start_deepthought2_run.py
launch_files/: slurm-launch-zaratan.py  slurm-template-zaratan.sh  start_deepthought2_run.py  start_zaratan_run.py
res_reg_lmnt_awikner/: classes.html  csc_mult.html  helpers.html  ks_etdrk4.html  lorenzrungekutta_numba.html  process_test_data.html  reservoir_train_test.html  (+2 more)
(+19 files in other folders)
